[metadata]
name = shuffler
version = 0.1
description = BIP39 Shuffler
long_description = BIP39 Shuffler
license = UNLICENCE
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    pytest >= 7.1.2
    embit >= 0.5.0

[options.package_data]
shuffler.wordlists = *txt

[options.entry_points]
console_scripts =
    shuffler = shuffler.main:main
